tests/rosetta/out/Smalltalk/chinese-remainder-theorem.out
/tmp/chinese-remainder-theorem.st:23: parse error, expected ']'
